mysql database setup

--- a/backend/config/.env
+++ b/backend/config/.env
@@ -3,3 +3,8 @@ PORT =4000
 FRONTEND_URL=http://localhost:5173
 
 DB_URI = mongodb+srv://subhadeepsamanta:118@restauproject.gfy8i.mongodb.net/
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=subha@18155373
+DB_NAME=asapproject
