--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
+    "sequelize": "^6.37.7",
     "validator": "^13.12.0"
   }
 }
